cmake_minimum_required(VERSION 3.1)
PROJECT(LightAPT NONE)

set(CMAKE_LIGHTAPT_VERSION_MAJOR 1)
set(CMAKE_LIGHTAPT_VERSION_MINOR 0)
set(CMAKE_LIGHTAPT_VERSION_RELEASE 0)

set(LIGHTAPT_SOVERSION ${CMAKE_LIGHTAPT_VERSION_MAJOR})
set(LIGHTAPT_VERSION ${CMAKE_LIGHTAPT_VERSION_MAJOR}.${CMAKE_LIGHTAPT_VERSION_MINOR}.${CMAKE_LIGHTAPT_VERSION_RELEASE})

set(DATA_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share/lightapt/")
set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
set(INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/include")

message("-- LightAPT Version : ${LIGHTAPT_VERSION}")
if(APPLE)
    set(CMAKE_SHARED_LINKER_FLAGS "-undefined dynamic_lookup")
endif(APPLE)

set(${CMAKE_BUILD_TYPE},"Debug")

# Build PHD2
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/server/guider)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/server/guider)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/server/guider/logviewer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/server/guider/logviewer)

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")

else(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

endif()